[package]
name = "bitcoin-rust"
version = "0.1.0"
authors = ["Giovanni Sferro <agi.novanta@gmail.com>"]

[dependencies]
regex = "0.1.41"
rustc-serialize = "0.3"
hyper = "0.6.15"
rust-crypto = "*"
time = "0.1"
mio = "0.4"
bytes = "0.2.11"
rand = "0.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
